Corrected Contrast Errors from audit V1

--- a/css/Fan Website.css
+++ b/css/Fan Website.css
@@ -47,7 +47,7 @@ h2  {
 h3 {
     padding: 5px 20px;
     margin: 0;
-    color: #070422;
+    color: #9999FF;
 }
 
 div#header {
